Bug 292274 - Text ui crashed when invited to a chat room
Summary: Text ui crashed when invited to a chat room
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
: 292853 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-23 15:51 UTC by Daniele E. Domenichelli
Modified: 2012-07-06 12:47 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.20 KB, text/plain)
2012-01-26 09:02 UTC, Daniele E. Domenichelli
Details
New crash information added by DrKonqi (6.11 KB, text/plain)
2012-01-26 10:25 UTC, Elias Probst
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2012-01-23 15:51:47 UTC
Application: ktp-text-ui (0.3)
KDE Platform Version: 4.7.4 (4.7.4)
Qt Version: 4.8.0
Operating System: Linux 3.1.0-1-amd64 x86_64
Distribution: Debian GNU/Linux testing (wheezy)

-- Information about the crash:
- What I was doing when the application crashed:

A gmail contact invited me to a chatroom, I received a notification from the approver, clicked on it and text-ui crashed

-- Backtrace:
Application: Telepathy Text Ui (ktp-text-ui), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f68aff83820 (LWP 17734))]

Thread 5 (Thread 0x7f68956c3700 (LWP 17735)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f68add5939c in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#2  0x00007f68add594c9 in ?? () from /usr/lib/x86_64-linux-gnu/libQtWebKit.so.4
#3  0x00007f68a92eab50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#4  0x00007f68a9c1f4ad in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7f6894daa700 (LWP 17736)):
#0  0x00007f68a9c14863 in *__GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=2828) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f68a5e545d8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f68a5e54a99 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f68abf5bdf6 in QEventDispatcherGlib::processEvents (this=0x1ec8bd0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007f68abf2b5f2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f68abf2b847 in QEventLoop::exec (this=0x7f6894da9d60, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f68abe2b307 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007f68abe2e32b in QThreadPrivate::start (arg=0x1ee4f30) at thread/qthread_unix.cpp:298
#8  0x00007f68a92eab50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#9  0x00007f68a9c1f4ad in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#10 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f684f78a700 (LWP 17737)):
#0  0x00007f68a9c14863 in *__GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f68a5e545d8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f68a5e54e02 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f684f78fd3b in ?? () from /usr/lib/x86_64-linux-gnu/gio/modules/libdconfsettings.so
#4  0x00007f68a5e797e6 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f68a92eab50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#6  0x00007f68a9c1f4ad in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f684ef89700 (LWP 17738)):
#0  0x00007f68a9c14863 in *__GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f68a5e545d8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f68a5e54e02 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f68a4cbddc6 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007f68a5e797e6 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f68a92eab50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#6  0x00007f68a9c1f4ad in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f68aff83820 (LWP 17734)):
[KCrash Handler]
#6  0x00007f68ae9074f8 in Tp::Contact::id (this=0x0) at /opt/telepathy/telepathy-qt4/TelepathyQt/contact.cpp:355
#7  0x00007f68ac2c972a in LogManager::LogManager (this=0x1fce720, account=..., contact=..., parent=0x1e5e370) at /opt/telepathy/ktp-text-ui/lib/logmanager.cpp:64
#8  0x00007f68ac2a7a43 in ChatWidget::ChatWidget (this=0x1e5e370, channel=..., account=..., parent=0x0) at /opt/telepathy/ktp-text-ui/lib/chat-widget.cpp:190
#9  0x0000000000416913 in ChatTab::ChatTab (this=0x1e5e370, channel=..., account=..., parent=0x0) at /opt/telepathy/ktp-text-ui/app/chat-tab.cpp:37
#10 0x000000000040e3b7 in TelepathyChatUi::handleChannels (this=0x1bbb690, context=..., account=..., connection=..., channels=..., channelRequests=..., userActionTime=..., handlerInfo=...) at /opt/telepathy/ktp-text-ui/app/telepathy-chat-ui.cpp:168
#11 0x00007f68ae8adc9f in Tp::ClientHandlerAdaptor::onReadyOpFinished (this=0x1d50620, op=0x1d26080) at /opt/telepathy/telepathy-qt4/TelepathyQt/client-registrar.cpp:509
#12 0x00007f68ae8a93f9 in Tp::ClientHandlerAdaptor::qt_static_metacall (_o=0x1d50620, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7fffce74a440) at /opt/telepathy/telepathy-qt4/build/TelepathyQt/_gen/client-registrar-internal.moc.hpp:428
#13 0x00007f68abf40bf1 in QMetaObject::activate (sender=0x1d26080, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffce74a440) at kernel/qobject.cpp:3547
#14 0x00007f68ae993d91 in Tp::PendingOperation::finished (this=0x1d26080, _t1=0x1d26080) at /opt/telepathy/telepathy-qt4/build/TelepathyQt/_gen/pending-operation.moc.hpp:112
#15 0x00007f68ae99447b in Tp::PendingOperation::emitFinished (this=0x1d26080) at /opt/telepathy/telepathy-qt4/TelepathyQt/pending-operation.cpp:123
#16 0x00007f68ae993c4c in Tp::PendingOperation::qt_static_metacall (_o=0x1d26080, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x1d39220) at /opt/telepathy/telepathy-qt4/build/TelepathyQt/_gen/pending-operation.moc.hpp:63
#17 0x00007f68abf45db6 in QObject::event (this=0x1d26080, e=<optimized out>) at kernel/qobject.cpp:1195
#18 0x00007f68aa846ec4 in notify_helper (e=0x1d2d7e0, receiver=0x1d26080, this=0x1bc7ca0) at kernel/qapplication.cpp:4555
#19 QApplicationPrivate::notify_helper (this=0x1bc7ca0, receiver=0x1d26080, e=0x1d2d7e0) at kernel/qapplication.cpp:4527
#20 0x00007f68aa84bd43 in QApplication::notify (this=0x1bbb690, receiver=0x1d26080, e=0x1d2d7e0) at kernel/qapplication.cpp:4416
#21 0x00007f68af499ae6 in KApplication::notify (this=0x1bbb690, receiver=0x1d26080, event=0x1d2d7e0) at ../../kdeui/kernel/kapplication.cpp:311
#22 0x00007f68abf2c80c in QCoreApplication::notifyInternal (this=0x1bbb690, receiver=0x1d26080, event=0x1d2d7e0) at kernel/qcoreapplication.cpp:876
#23 0x00007f68abf305da in sendEvent (event=0x1d2d7e0, receiver=0x1d26080) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#24 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x1b878e0) at kernel/qcoreapplication.cpp:1500
#25 0x00007f68abf5b963 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#26 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:279
#27 0x00007f68a5e540cf in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#28 0x00007f68a5e548c8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007f68a5e54a99 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#30 0x00007f68abf5bd8f in QEventDispatcherGlib::processEvents (this=0x1b891c0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#31 0x00007f68aa8eb4de in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#32 0x00007f68abf2b5f2 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#33 0x00007f68abf2b847 in QEventLoop::exec (this=0x7fffce74ade0, flags=...) at kernel/qeventloop.cpp:204
#34 0x00007f68abf308d7 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#35 0x000000000040bfd0 in main (argc=1, argv=0x7fffce74b288) at /opt/telepathy/ktp-text-ui/app/main.cpp:83

Reported using DrKonqi
Comment 1 Daniele E. Domenichelli 2012-01-23 18:29:11 UTC
I made a few tests and I can confirm that it crashes all the times
Comment 2 David Edmundson 2012-01-26 00:27:39 UTC
I fixed this.
Comment 3 Daniele E. Domenichelli 2012-01-26 09:02:20 UTC
Created attachment 68188 [details]
New crash information added by DrKonqi

ktp-text-ui (0.3) on KDE Platform 4.7.4 (4.7.4) using Qt 4.8.0

Still not working for me... 
Here is a new backtrace

-- Backtrace (Reduced):
#6  QObject::connect (sender=0x200000, signal=0x7f967fcd66b0 "2fetched(QList<AdiumThemeContentInfo>)", receiver=0x27c55b0, method=0x7f967fcd6648 "1onHistoryFetched(QList<AdiumThemeContentInfo>)", type=Qt::AutoConnection) at kernel/qobject.cpp:2551
#7  0x00007f967fcac09a in QObject::connect (this=0x27c55b0, asender=0x200000, asignal=0x7f967fcd66b0 "2fetched(QList<AdiumThemeContentInfo>)", amember=0x7f967fcd6648 "1onHistoryFetched(QList<AdiumThemeContentInfo>)", atype=Qt::AutoConnection) at /usr/include/qt4/QtCore/qobject.h:339
#8  0x00007f967fcaa033 in ChatWidget::chatViewReady (this=0x27c55b0) at /opt/telepathy/ktp-text-ui/lib/chat-widget.cpp:666
#9  0x00007f967fcab795 in ChatWidget::qt_static_metacall (_o=0x27c55b0, _c=QMetaObject::InvokeMetaMethod, _id=19, _a=0x27c9470) at /opt/telepathy/ktp-text-ui/build/lib/chat-widget.moc:118
#10 0x00007f967f943db6 in QObject::event (this=0x27c55b0, e=<optimized out>) at kernel/qobject.cpp:1195
Comment 4 David Edmundson 2012-01-26 10:17:20 UTC
Heh, seems like I moved the crash somewhere else. The code was rather shoddy, it needs rewriting.
Comment 5 Elias Probst 2012-01-26 10:25:47 UTC
Created attachment 68191 [details]
New crash information added by DrKonqi

ktp-text-ui (0.3) on KDE Platform 4.8.00 (4.8.0 using Qt 4.7.4

- What I was doing when the application crashed:
I've started using group-chats in KTP daily 2 weeks ago (2012-01-10) and I've never seen a crash since then.
I rebuilt KTP every 2-3 days since then from git-master.

Now it's the first time I see this crash and also can reproduce it constantly when joining (not using an invitation) a group-chat by using "Join Chat Room" in contact-list.

Using KDE 4.8.0, Qt 4.7.4, KTP from git as of 2012-01-26, 10:00 UTC.

-- Backtrace (Reduced):
#6  QObject::connect (sender=0x46a74614da85dae8, signal=0x7ff87ecd9da8 "2fetched(QList<AdiumThemeContentInfo>)", receiver=0xa13f90, method=0x7ff87ecd9d78 "1onHistoryFetched(QList<AdiumThemeContentInfo>)", type=Qt::AutoConnection) at kernel/qobject.cpp:2489
#7  0x00007ff87ecc1f98 in connect (atype=Qt::AutoConnection, amember=0x7ff87ecd9d78 "1onHistoryFetched(QList<AdiumThemeContentInfo>)", asignal=0x7ff87ecd9da8 "2fetched(QList<AdiumThemeContentInfo>)", asender=<optimized out>, this=0xa13f90) at /usr/include/qt4/QtCore/qobject.h:315
#8  ChatWidget::chatViewReady (this=0xa13f90) at /var/tmp/portage/net-im/ktp-text-ui-9999/work/ktp-text-ui-9999/lib/chat-widget.cpp:666
#9  0x00007ff87ecc6503 in ChatWidget::qt_metacall (this=0xa13f90, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x9e6bf0) at /var/tmp/portage/net-im/ktp-text-ui-9999/work/ktp-text-ui-9999_build/lib/chat-widget.moc:141
#10 0x000000000040b0c0 in ChatTab::qt_metacall (this=0xa13f90, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x9e6bf0) at /var/tmp/portage/net-im/ktp-text-ui-9999/work/ktp-text-ui-9999_build/app/moc_chat-tab.cpp:69
Comment 6 David Edmundson 2012-01-29 23:34:18 UTC
Git commit ec32f257314382062de5890595a6ad7607020bc1 by David Edmundson.
Committed on 29/01/2012 at 18:06.
Pushed by davidedmundson into branch 'master'.

Tidy up the log loader, and fix all associated crashes

REVIEW: 103824
Related: bug 292716

M  +3    -6    lib/chat-widget.cpp
M  +21   -17   lib/logmanager.cpp
M  +2    -3    lib/logmanager.h

http://commits.kde.org/telepathy-text-ui/ec32f257314382062de5890595a6ad7607020bc1
Comment 7 Martin Klapetek 2012-01-30 10:35:11 UTC
*** Bug 292853 has been marked as a duplicate of this bug. ***