Tidy up the log loader, and fix all associated crashes

REVIEW: 103824
BUG:292274
CCBUG:292716